# subdivision-framework

./: .gitignore  CMakeLists.txt  Makefile  skeleton.sln  volumeRender_vs2017.sln
skeleton/: AStar.cpp  AStar.h  AirSigmet.cpp  AirSigmet.h  Camera.cpp  Camera.h  Cell.cpp  Cell.h  Constants.h  ContentReadWrite.cpp  ContentReadWrite.h  DGGS.cpp  DGGS.h  DGGSDB.cpp  DGGSDB.h  EqualAreaDodecahedron.cpp  EqualAreaDodecahedron.h  EqualAreaOctahedron.cpp  EqualAreaOctahedron.h  EqualAreaTetrahedron.cpp  EqualAreaTetrahedron.h  EqualAreaTriangle.cpp  EqualAreaTriangle.h  EqualAreaTriangleSubdivision.cpp  EqualAreaTriangleSubdivision.h  FlightCost.cpp  FlightCost.h  Frustum.cpp  Frustum.h  Geometry.cpp  Geometry.h  InputHandler.cpp  InputHandler.h  Program.cpp  Program.h  RayTracer.cpp  RayTracer.cu  RayTracer.h  RenderEngine.cpp  RenderEngine.h  (+47 more)
skeleton/data/: cat5paths.json  cat5pathsm.json  eq-2017m.json  samplePath.json  samplePath2.json  samplePath2m.json  sigmet.json
skeleton/models/: sphereTest.mtl  sphereTex.mtl
skeleton/shaders/: main.frag  main.vert  manyColours.frag  manyColours.vert  mesh.frag  mesh.vert  oneColour.vert  skybox.frag  skybox.vert
